<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/MainContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="317dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/register_input_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/register_input_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mail"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/register_input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/register_input_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <CheckBox
            android:id="@+id/checkBoxStatusR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Professional" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#855F8F"
            android:text="@string/signup"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/goToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/already_signed"
            android:textColor="#757575" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>