<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offer_creation_title"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_title_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/default_offer_title"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />

                <EditText
                    android:id="@+id/add_price_input"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/money"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/add_content_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/input_content_hint"
                android:inputType="textMultiLine"
                android:minHeight="96dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/add_tags_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_tags_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/add_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_color"
                android:text="@string/send"
                android:textColor="@color/light_color" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>