<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/MainContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ConnectionMessage"
            android:layout_width="317dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="@string/signin"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/signin_input_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/signin_input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/signin_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_color"
            android:text="@string/signin"
            android:textColor="@color/selected_color"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/signin_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_color"
            android:text="@string/not_yet_signed"
            android:textColor="@color/selected_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>